list/add/del user permissions methods added
